--- a/modules/parade_demo/sass/paragraphs/_form.scss
+++ b/modules/parade_demo/sass/paragraphs/_form.scss
@@ -140,7 +140,8 @@
             }
 
             &:nth-child(2) {
-              margin: 0 10px;
+              margin-left: 10px;
+              margin-right: 10px;
             }
           }
 
